src/objects/ChangeInCircumstances__c.object
<CustomObject><fields>
        <fullName>Act_of_God__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Act of God, war, disaster or other Appraisal Received
emergency</inlineHelpText>
        <label>Act of God,war,disaster</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>AddRemove_Borrowe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AddRemove Borrowe</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Add_a_Non_Borrowing_Spouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add a Non Borrowing Spouse</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Adding_a_non_borrowing_resident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adding a non-borrowing resident</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Additional_Loan_Explanation__c</fullName>
        <label>Explanation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Appraisal_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appraisal Received</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Bring_Optional_Funds_to_Closing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bring Optional Funds to Closing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CIC_RESPA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Information has been obtained regarding the client’s loan, which will result in changed circumstance under RESPA Section 3500.2</inlineHelpText>
        <label>CIC RESPA Section 3500.2</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Change_in_Employment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change in Employment</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Change_in_Loan_Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change in Loan Officer</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Change_in_Requested_Payment_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change in Requested Payment Plan</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Fee_Change_Explanation__c</fullName>
        <label>Explanation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Inaccurate_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Inaccurate information about the
client or transaction</inlineHelpText>
        <label>Inaccurate Information</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipName>ChangeInCircumtances</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>No_fee_changes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is not checked, please check 'Related' for the Fee changes.</inlineHelpText>
        <label>No fee changes</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Other_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Change</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Other_Circumstance_Client_or_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Other circumstance that is particular
to the client or transaction</inlineHelpText>
        <label>Other Circumstance Client or Transaction</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Other_Information_to_Client_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Other New Information  particular to Client or transaction</inlineHelpText>
        <label>Other Information to Client Transaction</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Reduce_Origination_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reduce Origination Fee</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_Fees_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title Fees Received</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Withdraw__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Withdraw</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>change_circumstance_occurred_on__c</fullName>
        <label>change circumstance occurred on</label>
        <type>Date</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Change In Circumstance</label><nameField>
        <displayFormat>CIC-{0}</displayFormat>
        <label>CIC-ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Change In Circumstances</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>